--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
 
     implementation("io.coil-kt:coil-compose:1.3.2")
+    implementation "androidx.navigation:navigation-compose:2.5.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
